[package]
name = "worker-rust"
version = "0.5.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.5.0"
tokio = { version = "1.42", features = ["io-util"] }
pin-project = "1.1.7"
futures-util = { version = "0.3.31", default-features = false }
base64 = "0.21.0"
bytes = "1.9.0"

[profile.release]
lto = true
strip = true
codegen-units = 1
