[package]
name = "worker-rust"
version = "0.1.2"
edition = "2024"

[dependencies]
worker = "0.6.2"
tokio = { version = "1.38.0", features = ["full"] }
pin-project = "1.1.4"
futures-util = { version = "0.3.30", default-features = false }
base64 = "0.21.7"
bytes = "1.5.0"
hex = "0.4.3"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = 3
panic = "abort"
